--- a/store.html
+++ b/store.html
@@ -66,7 +66,7 @@
   <!-- 🔥 عروض اليوم -->
   <section>
     <h2 class="text-2xl font-semibold mb-6">🔥 عروض اليوم</h2>
-    <div id="offers" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
+  <div id="store-products" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
   </section>
 
   <footer class="mt-10 text-xs text-gray-400 text-center">
@@ -154,4 +154,5 @@
   </script>
 </body>
 </html>
+
 
