--- a/index.html
+++ b/index.html
@@ -179,21 +179,21 @@
 
   const authBtns = document.getElementById("authBtns");
 
-  // 🔹 إنشاء صندوق المستخدم
-  const userBox = document.createElement("div");
-  userBox.className = "hidden items-center gap-3 cursor-pointer relative";
-  userBox.innerHTML = `
-    <button id="addProductBtn" class="hidden px-4 py-2 bg-yellow-400 text-black rounded-full font-semibold hover:bg-yellow-300 transition">
-      📦 عرض منتجك
-    </button>
-    <span id="userName" class="font-semibold text-yellow-400"></span>
-    <img id="userPhoto" class="w-10 h-10 rounded-full border-2 border-yellow-400 object-cover">
-    <div id="dropdownMenu" class="hidden absolute top-12 right-0 bg-gray-800 border border-white/10 rounded-lg shadow-lg w-40 py-2 text-sm">
-      <button id="profileBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10">👤 الملف الشخصي</button>
-      <button id="logoutBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10 text-red-400">🚪 تسجيل الخروج</button>
-    </div>
-  `;
-  authBtns.parentElement.appendChild(userBox);
+ <!-- 🔹 صندوق المستخدم -->
+const userBox = document.createElement("div");
+userBox.className = "hidden flex items-center gap-2 cursor-pointer relative";
+userBox.innerHTML = `
+  <img id="userPhoto" class="w-10 h-10 rounded-full border-2 border-yellow-400 object-cover">
+  <span id="userName" class="font-semibold text-yellow-400"></span>
+  <button id="addProductBtn" class="hidden px-3 py-1 bg-yellow-400 text-black rounded-full font-semibold hover:bg-yellow-300 transition">
+    + 📦 عرض منتجك
+  </button>
+  <div id="dropdownMenu" class="hidden absolute top-12 right-0 bg-gray-800 border border-white/10 rounded-lg shadow-lg w-40 py-2 text-sm">
+    <button id="profileBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10">👤 الملف الشخصي</button>
+    <button id="logoutBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10 text-red-400">🚪 تسجيل الخروج</button>
+  </div>
+`;
+authBtns.parentElement.appendChild(userBox);
 
   // 🔥 حالة تسجيل الدخول / الخروج
   onAuthStateChanged(auth, (user) => {
@@ -274,3 +274,4 @@
 </script>
 </body>
 </html>
+
