--- a/index.html
+++ b/index.html
@@ -1,212 +1,29 @@
-<!doctype html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ليزفار DZ — الصفحة الرئيسية</title>
+<script type="module">
+  import { auth } from "./firebase-config.js";
+  import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
-    body {
-      font-family: "Cairo", sans-serif;
-      background-color: #0b1220;
-    }
-    .bg-tech {
-      background-image:
-        radial-gradient(circle at 10% 10%, rgba(255,255,255,0.02), transparent 2%),
-        radial-gradient(circle at 90% 90%, rgba(255,255,255,0.01), transparent 2%),
-        linear-gradient(120deg, rgba(255,255,255,0.02), transparent 10%);
-      background-blend-mode: overlay;
-    }
-    .side-item:hover { background: rgba(255,255,255,0.03); }
-    .chev { transition: transform .25s ease; }
-    .chev.open { transform: rotate(-90deg); }
-    select option { color: black; }
-    .submenu { transition: max-height 0.3s ease; overflow: hidden; }
-  </style>
-</head>
+  const authBtns = document.getElementById("authBtns");
 
-<body class="min-h-screen text-white bg-gradient-to-br from-gray-900 via-gray-800 to-black bg-tech">
-  <div class="min-h-screen flex">
+  // 🔹 إنشاء صندوق المستخدم
+  const userBox = document.createElement("div");
+  userBox.className = "hidden flex items-center gap-2 cursor-pointer relative";
+  userBox.innerHTML = `
+    <img id="userPhoto" class="w-10 h-10 rounded-full border-2 border-yellow-400 object-cover">
+    <span id="userName" class="font-semibold text-yellow-400"></span>
+    <button id="addProductBtn" class="hidden px-3 py-1 bg-yellow-400 text-black rounded-full font-semibold hover:bg-yellow-300 transition">
+      + 📦 عرض منتجك
+    </button>
+    <div id="dropdownMenu" class="hidden absolute top-12 right-0 bg-gray-800 border border-white/10 rounded-lg shadow-lg w-40 py-2 text-sm">
+      <button id="profileBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10">👤 الملف الشخصي</button>
+      <button id="logoutBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10 text-red-400">🚪 تسجيل الخروج</button>
+    </div>
+  `;
+  authBtns.parentElement.appendChild(userBox);
 
-    <!-- Sidebar -->
-    <aside class="w-72 bg-gray-900/70 border-r border-white/5 p-4 hidden lg:block">
-      <div class="flex items-center gap-3 mb-6">
-        <div class="w-12 h-12 rounded-lg bg-yellow-400 flex items-center justify-center text-black font-bold">LZ</div>
-        <div>
-          <h1 class="text-lg font-semibold">ليزفار DZ</h1>
-          <p class="text-xs text-gray-400">سوق الأجهزة وقطع الحاسوب</p>
-        </div>
-      </div>
+  const addProductBtn = document.getElementById("addProductBtn");
 
-      <!-- Navigation -->
-      <nav class="space-y-2 overflow-auto" style="max-height:calc(100vh - 160px);">
-        <button data-filter="all" class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">أحدث المنتجات</button>
-
-        <!-- الفئات -->
-        <div>
-          <button class="toggle-btn w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium" data-target="pc-submenu">
-            <span>PC</span>
-            <svg class="chev w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div id="pc-submenu" class="submenu mt-2 mr-2 ml-2 max-h-0 space-y-1 text-sm overflow-hidden">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">تجميعات</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">كروت شاشة</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">معالجات</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">رامات</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">كروت أم</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">مراوح تبريد</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">SSD / HDD</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">وحدة الطاقة</button>
-          </div>
-        </div>
-
-        <div>
-          <button class="toggle-btn w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium" data-target="laptop-submenu">
-            <span>Laptop</span>
-            <svg class="chev w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div id="laptop-submenu" class="submenu mt-2 mr-2 ml-2 max-h-0 space-y-1 text-sm overflow-hidden">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">HP</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Dell</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Lenovo</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Asus</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">MSI</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Apple</button>
-          </div>
-        </div>
-
-        <div>
-          <button class="toggle-btn w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium" data-target="phone-submenu">
-            <span>هواتف</span>
-            <svg class="chev w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div id="phone-submenu" class="submenu mt-2 mr-2 ml-2 max-h-0 space-y-1 text-sm overflow-hidden">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Samsung</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xiaomi</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Huawei</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Oppo</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Infinix</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">iPhone</button>
-          </div>
-        </div>
-
-        <div>
-          <button class="toggle-btn w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium" data-target="console-submenu">
-            <span>Consoles</span>
-            <svg class="chev w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div id="console-submenu" class="submenu mt-2 mr-2 ml-2 max-h-0 space-y-1 text-sm overflow-hidden">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">PlayStation</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xbox</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Nintendo</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">Handhelds</button>
-          </div>
-        </div>
-
-        <div>
-          <button class="toggle-btn w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium" data-target="acc-submenu">
-            <span>إكسسوارات</span>
-            <svg class="chev w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
-          </button>
-          <div id="acc-submenu" class="submenu mt-2 mr-2 ml-2 max-h-0 space-y-1 text-sm overflow-hidden">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">فأرة</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">لوحة مفاتيح</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">سماعات</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الحاسوب</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">إكسسوارات الهاتف</button>
-          </div>
-        </div>
-      </nav>
-    </aside>
-
-    <!-- Main -->
-    <main class="flex-1 p-6 lg:pl-8">
-      <!-- Header -->
-      <header class="flex flex-col sm:flex-row sm:items-center justify-between mb-8 gap-4 relative">
-        <div class="flex items-center gap-3 relative">
-          <div id="authBtns" class="flex gap-3">
-            <a href="signup.html" class="px-4 py-2 rounded-full bg-yellow-400 text-black font-semibold">إنشاء حساب</a>
-            <a href="login.html" class="px-4 py-2 rounded-full bg-white/10 hover:bg-white/20 transition">تسجيل الدخول</a>
-          </div>
-        </div>
-
-        <div class="flex-1 max-w-xl sm:ml-4 flex flex-col sm:flex-row gap-2">
-          <input type="text" placeholder="ابحث عن منتج أو فئة..." class="flex-1 px-4 py-2 rounded-lg bg-white/10 text-white placeholder-white/70 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition">
-          <select class="px-3 py-2 rounded-lg bg-white/10 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
-            <option>كل الفئات</option>
-            <option>PC</option>
-            <option>Laptop</option>
-            <option>هواتف</option>
-            <option>Consoles</option>
-            <option>إكسسوارات</option>
-            <option>شاشات</option>
-          </select>
-        </div>
-      </header>
-
-      <section>
-        <h2 class="text-2xl font-semibold mb-4">🔥 أفضل العروض</h2>
-        <div id="offersSection" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8"></div>
-      </section>
-
-      <footer class="text-xs text-gray-400 mt-12">
-        © 2025 Lizfar DZ — كل الحقوق محفوظة
-      </footer>
-    </main>
-  </div>
-
-  <!-- ✅ Sidebar Toggle -->
-  <script>
-    document.querySelectorAll(".toggle-btn").forEach(btn => {
-      btn.addEventListener("click", () => {
-        const target = document.getElementById(btn.dataset.target);
-        const icon = btn.querySelector(".chev");
-        const isOpen = target.style.maxHeight && target.style.maxHeight !== "0px";
-        target.style.maxHeight = isOpen ? "0px" : target.scrollHeight + "px";
-        icon.classList.toggle("open", !isOpen);
-      });
-    });
-  </script>
-
-<!-- 🔹 صندوق المستخدم -->
-const userBox = document.createElement("div");
-userBox.className = "hidden flex items-center cursor-pointer relative";
-userBox.innerHTML = `
-  <img id="userPhoto" class="w-10 h-10 rounded-full border-2 border-yellow-400 object-cover mr-2">
-  <span id="userName" class="font-semibold text-yellow-400 whitespace-nowrap"></span>
-  <button id="addProductBtn" class="hidden ml-4 px-3 py-1 bg-yellow-400 text-black rounded-full font-semibold hover:bg-yellow-300 transition whitespace-nowrap">
-    + 📦 عرض منتجك
-  </button>
-  <div id="dropdownMenu" class="hidden absolute top-12 right-0 bg-gray-800 border border-white/10 rounded-lg shadow-lg w-40 py-2 text-sm">
-    <button id="profileBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10">👤 الملف الشخصي</button>
-    <button id="logoutBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10 text-red-400">🚪 تسجيل الخروج</button>
-  </div>
-`;
-authBtns.parentElement.appendChild(userBox);
-
- <!-- 🔹 صندوق المستخدم -->
-const userBox = document.createElement("div");
-userBox.className = "hidden flex items-center gap-2 cursor-pointer relative";
-userBox.innerHTML = `
-  <img id="userPhoto" class="w-10 h-10 rounded-full border-2 border-yellow-400 object-cover">
-  <span id="userName" class="font-semibold text-yellow-400"></span>
-  <button id="addProductBtn" class="hidden px-3 py-1 bg-yellow-400 text-black rounded-full font-semibold hover:bg-yellow-300 transition">
-    + 📦 عرض منتجك
-  </button>
-  <div id="dropdownMenu" class="hidden absolute top-12 right-0 bg-gray-800 border border-white/10 rounded-lg shadow-lg w-40 py-2 text-sm">
-    <button id="profileBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10">👤 الملف الشخصي</button>
-    <button id="logoutBtn" class="block w-full text-right px-4 py-2 hover:bg-white/10 text-red-400">🚪 تسجيل الخروج</button>
-  </div>
-`;
-authBtns.parentElement.appendChild(userBox);
-
-  // 🔥 حالة تسجيل الدخول / الخروج
+  // 🔥 متابعة حالة تسجيل الدخول
   onAuthStateChanged(auth, (user) => {
-    const addProductBtn = document.getElementById("addProductBtn");
-
     if (user) {
       authBtns.classList.add("hidden");
       userBox.classList.remove("hidden");
@@ -215,12 +32,10 @@ authBtns.parentElement.appendChild(userBox);
       document.getElementById("userName").textContent = user.displayName || "مستخدم";
       document.getElementById("userPhoto").src = user.photoURL || "https://cdn-icons-png.flaticon.com/512/149/149071.png";
 
+      // فتح/إغلاق القائمة عند النقر على الصورة
       const dropdown = document.getElementById("dropdownMenu");
       const photo = document.getElementById("userPhoto");
-
-      photo.addEventListener("click", () => {
-        dropdown.classList.toggle("hidden");
-      });
+      photo.addEventListener("click", () => dropdown.classList.toggle("hidden"));
 
       document.getElementById("logoutBtn").addEventListener("click", async () => {
         await signOut(auth);
@@ -237,14 +52,13 @@ authBtns.parentElement.appendChild(userBox);
       });
 
     } else {
-      // عند تسجيل الخروج
       authBtns.classList.remove("hidden");
       userBox.classList.add("hidden");
       addProductBtn.classList.add("hidden");
     }
   });
 
-  // لإغلاق القائمة عند الضغط خارجها
+  // إغلاق القائمة عند الضغط خارجها
   document.addEventListener("click", (e) => {
     const dropdown = document.getElementById("dropdownMenu");
     if (dropdown && !dropdown.contains(e.target) && !e.target.closest("#userPhoto")) {
@@ -252,35 +66,3 @@ authBtns.parentElement.appendChild(userBox);
     }
   });
 </script>
-  
-  <!-- ✅ تحميل قسم العروض من store.html -->
-<script>
-  // تحميل منتجات من store.html تلقائيًا
-  fetch("store.html")
-    .then(res => res.text())
-    .then(html => {
-      // إنشاء عنصر مؤقت لقراءة محتوى الصفحة
-      const temp = document.createElement("div");
-      temp.innerHTML = html;
-
-      // العثور على قسم المنتجات
-      const products = temp.querySelector("#store-products");
-      if (products) {
-        // إنشاء قسم جديد في index.html لإضافة المنتجات تحته
-        const targetSection = document.createElement("section");
-        targetSection.className = "mt-12";
-        targetSection.innerHTML = `
-          <h2 class="text-2xl font-semibold mb-4">🛒 منتجات المتجر</h2>
-          ${products.outerHTML}
-        `;
-        // إدراج القسم بعد قسم العروض الحالي
-        const offersSection = document.getElementById("offersSection");
-        if (offersSection) offersSection.after(targetSection);
-      }
-    })
-    .catch(err => console.error("حدث خطأ أثناء تحميل المتجر:", err));
-</script>
-</body>
-</html>
-
-
